--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,10 @@ h1, h2{
     font-family: "Merriweather", serif;
     text-transform: lowercase;
     font-size: 3em;
+}
 
+p{
+    line-height: 1.5em;
 }
 
 header{
@@ -101,6 +104,10 @@ nav ul{
     text-align: center;
     margin-bottom: 8em;
     gap: 2.5em;
+}
+
+.row-three p, .portfolio p, .shop p{
+    max-width: 35vw;;
 }
 
 .three-img-row{
